overflow fixed

--- a/HTML-form/style/style.css
+++ b/HTML-form/style/style.css
@@ -1,6 +1,13 @@
 * {
   box-sizing: border-box;
 }
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .container {
   margin: auto;
   border-radius: 50px;
@@ -8,6 +15,8 @@
   height: 100px;
   border-radius: 50px;
   background: linear-gradient(45deg, red, orange, purple);
+  cursor: pointer;
+  overflow: hidden;
 }
 .container:hover {
   width: 700px;
@@ -66,4 +75,5 @@ button {
 }
 button:hover {
   background-color: rgb(50, 49, 49);
+  cursor: pointer;
 }
